Fixed unclickable menu buttons on mobile

--- a/app/public/css/StyleSheet.css
+++ b/app/public/css/StyleSheet.css
@@ -36,7 +36,9 @@ div.loginmenu {
   margin-left: 0px;
   margin-right: 0px;
   z-index: 5;
+  border-radius: 0px 0px 3px 3px;
 }
+
 
 ul.loginmenu.dropdown {
   border: solid 1px #52ffb8;
@@ -64,6 +66,8 @@ p.loginmenu {
   margin-top: -18px;
   margin-bottom: 0px;
   padding-left: 5px;
+  border-radius: 10px 10px 0px 0px;
+  min-width: 100px;
 }
 
 div.post {
